--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "project2",
+  "name": "vite-vue-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^13.1.0",
-    "pinia": "^3.0.2",
-    "vue": "^3.5.13"
+    "vue": "^3.4.38",
+    "pinia": "^2.1.7",
+    "@vueuse/core": "^10.7.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-vue": "^5.1.3",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.2",
+    "vue-tsc": "^2.1.4",
+    "autoprefixer": "^10.4.17",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35"
   }
 }
